# ALSE-2025-2-G1

./: .gitignore  CMakeLists.txt  code.cpp  controlStr_exe  ejemplo1  ejemplo1.cpp  ejemplo2.cpp  example1  example2  funciones_exe  readme.md  script1.sh
Ejemplo3/: CMakeLists.txt  controlStructures  controlStructures.cpp
Ejemplo4/: CMakeLists.txt  callbacks.cpp  funciones.cpp
ejemplo5/: CMakeLists.txt  argumentos.cpp
ejercicios_practica/: ejrec_practica1.md
